fix button text alignment

--- a/scss/components/button.scss
+++ b/scss/components/button.scss
@@ -5,13 +5,14 @@
     border: 0;
     border-radius: 20px;
     font-size: 14px;
-    padding: 12px 30px;
+    padding: 14px 30px;
     cursor: pointer;
     text-decoration: none;
     transition: all .2s ease;
     text-align: center;
     font-family: $font_primary;
     font-weight: 500;
+    line-height: normal;
 
     &:hover, &:focus {
         text-decoration: none;
